# goose-google-docs-extension

./: README.md  install.sh  pyproject.toml  server.py
