[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goose-google-docs-mcp"
version = "1.0.0"
description = "Google Docs & Drive MCP extension for Goose — read, write, create, and manage Google Docs directly from your AI agent"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Harold Moses", email = "hwmoses2@icloud.com" }
]
keywords = ["goose", "mcp", "google-docs", "google-drive", "ai-agent"]
dependencies = [
    "mcp>=1.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
